# eTiKeT-service-manager

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-tests.yml  release.yml
etiket_service_manager/: __init__.py  config.py  exceptions.py  manager.py  status.py
etiket_service_manager/backends/: __init__.py  base.py  linux.py  linux_templates.py  macos.py  windows.py  windows_templates.py
etiket_service_manager/services/: __init__.py  _paths.py  sync_agent.py  sync_api.py
tests/: conftest.py  test_input_validation.py  test_rapid_operations.py  test_service_behavior.py  test_service_lifecycle.py  test_state_transitions.py
tests/test_service/: build_test_service.py  requirements.txt  test_service.py  test_service.spec
