[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etiket_service_manager"
version = "0.1.0"
description = "Cross-platform service management library for Linux, macOS, and Windows"
authors = [{name = "QHarbor team"}]
requires-python = ">=3.9"

dependencies = [
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["etiket_service_manager*"]